# unistat

./: .gitignore  README.md  pyproject.toml
src/unistat/: contingency.py  continuous.py  regression.py
